--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="./image (1).svg" type="image/icon type">
 </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLR456QJDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLR456QJDK');
+</script>
 <body>
     <div class="container">
         <header>
@@ -47,5 +56,6 @@
     </div>
     <script src="./main.js"></script>
     <script src="./gptIntergration.js"></script>
+    
 </body>
 </html>
