--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 
   gtag('config', 'G-ZLR456QJDK');
 </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLR456QJDK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZLR456QJDK');
+</script>
 <body>
     <div class="container">
         <header>
